# Mergen

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  Dockerfile  Dockerfile_test  LLVM_API_NOTES.md  README.md  REVIEW_CHECKLIST.md  VMP_TESTING_NOTES.md  autoresearch.md  autoresearch.program.md  autoresearch.sh  cmake.toml  test.py
.github/: FUNDING.yml  SPECULATIVE_INLINE_ISSUE.md  pull_request_template.md
.github/workflows/: docker-image-and-run.yml  docker-image.yml  rewrite-strict-gate.yml  windows-build.yml
cmake/: FindIced-Wrapper.cmake  FindLLVM-Wrapper.cmake  cmkr.cmake;
docs/: BUILDING.md  LOOP_HANDLING.md  REVIEWER_RULES.md  REWRITE_BASELINE.md  SCOPE.md  themida_output.ll  themida_output_lazy_fix.ll
docs/semantic_reports/: INDEX.md  bitchain.md  bitchain_report.md  branch.md  branch_report.md  bytecode_vm_loop.md  bytecode_vm_loop_report.md  calc_cout.md  calc_cout_report.md  calc_fib.md  calc_fib_report.md  calc_grade.md  calc_grade_report.md  calc_jumptable.md  calc_jumptable_large.md  calc_jumptable_large_report.md  calc_jumptable_report.md  calc_mixed.md  calc_mixed_report.md  calc_sum_array.md  calc_sum_array_report.md  calc_sum_to_n.md  calc_sum_to_n_report.md  calc_switch.md  calc_switch_report.md  cmov_chain.md  cmov_chain_report.md  diamond.md  diamond_report.md  dummy_vm_loop.md  dummy_vm_loop_report.md  indirect.md  indirect_report.md  instr_add.md  instr_add_report.md  instr_rol.md  instr_rol_report.md  instr_sub.md  instr_sub_report.md  instr_xor.md  (+304 more)
icpped_rust/: Cargo.toml  build.rs
icpped_rust/src/: lib.rs
lifter/: .clang-format  CMakeLists.txt  CommandLineHelpers.hpp  CommonDisassembler.hpp  CommonMnemonics.h  CommonRegisters.h  CustomPasses.hpp  FunctionSignatures.cpp  FunctionSignatures.h  FunctionSignatures.hpp  GEPTracker.cpp  GEPTracker.h  GEPTracker.ipp  InlinePolicy.hpp  LLVM-init.cpp  LLVM-init.h  LiftDriver.hpp  LifterApplication.hpp  LifterPipeline.hpp  LifterPipelineStages.hpp  LifterStages.hpp  MemoryPolicy.hpp  MemoryPolicySetup.hpp  MergenPB.hpp  OperandUtils.cpp  OperandUtils.h  OperandUtils.ipp  PathSolver.cpp  PathSolver.h  PathSolver.ipp  ROPdetection.cpp  ROPdetection.h  RegisterManager.hpp  RuntimeImageContext.hpp  Semantics.cpp  Semantics.h  Semantics.ipp  Semantics_Helpers.ipp  Semantics_bkup.cpp_bkup  ZydisDisassembler.hpp  (+24 more)
lifter/analysis/: CustomPasses.hpp  PathSolver.cpp  PathSolver.h  PathSolver.ipp
lifter/core/: AbiCallContract.hpp  FunctionSignatures.hpp  InlinePolicy.hpp  LiftDiagnostics.hpp  LiftDriver.hpp  Lifter.cpp  LifterApplication.hpp  LifterClass.hpp  LifterClass_Concolic.hpp  LifterClass_Symbolic.hpp  LifterPipeline.hpp  LifterPipelineStages.hpp  LifterStages.hpp  MergenPB.hpp  RegisterManager.hpp  RuntimeImageContext.hpp  Utils.cpp  Utils.h
lifter/disasm/: CommonDisassembler.hpp  IcedDisassembler.hpp  IcedDisassemblerMnemonics.h  ZydisDisassembler.hpp  ZydisDisassemblerRegisters.h
lifter/memory/: FileReader.hpp  GEPTracker.ipp  MemoryPolicySetup.hpp
lifter/semantics/: OperandUtils.ipp  PPMacros.hpp  Semantics.ipp  Semantics_Arithmetic.ipp  Semantics_Bitwise.ipp  Semantics_ControlFlow.ipp  Semantics_Helpers.ipp  Semantics_Misc.ipp  x86_64_opcodes.x
lifter/test/: TestInstructions.cpp  TestInstructions.h  Tester.hpp
lifter/test/test_vectors/: golden_ir_hashes.json  oracle_vectors.json  oracle_vectors_full_handlers.json
lifter/test_vectors/: golden_ir_hashes.json  oracle_vectors.json  oracle_vectors_flagstress.json  oracle_vectors_full_handlers.json
scripts/dev/: bench_both.ps1  build_iced.cmd  build_zydis.cmd  compare_signature_perf.ps1  configure_iced.cmd  configure_zydis.cmd  profile_manifest_samples.ps1  profile_samples.ps1  profile_simple_vmp.ps1  trace_external_calls.py
scripts/review/: format_comment.py  invariant_guard.py  review_buckets.py  risk_map.py  run_review.py  shard_pr.py  verify_plan.py
scripts/rewrite/: build_full_handler_seed.cmd  build_full_handler_seed.py  build_samples.cmd  check_semantic.py  check_themida_equivalence.py  collect_instruction_tests.cmd  collect_instruction_tests.py  enrich_seed.py  generate_equivalence_reports.py  generate_flag_stress_vectors.cmd  generate_flag_stress_vectors.py  generate_oracle_vectors.cmd  generate_oracle_vectors.py  generate_semantic_reports.py  generate_vm_sample.py  instruction_microtests.json  manifest_validation.ps1  oracle_seed_full_handlers.json  oracle_seed_full_handlers_enriched.json  oracle_seed_vectors.json  oracle_vectors.json  report_coverage.py  run.cmd  run.ps1  run_all_handlers.cmd  run_flagstress.cmd  run_microtests.cmd  sleigh_oracle.py  themida_samples.json  verify.ps1
testcases/: CommutativeOrAssociative.asm  bench_add.asm  bench_add_concretized.asm  bench_add_mem.asm  bench_add_mem_concretized.asm  pushf.asm  teb_test.asm  test_branch_mem.asm  test_branch_meme.asm  test_branch_sf.asm  test_branch_zf.asm  test_div.asm  test_idiv.asm  test_indirect_mem.asm  test_indirect_mem2.asm  test_invalid_mem.asm  test_jumptable.asm  test_partial_mem.asm  test_reallocate.asm
testcases/rewrite_smoke/: bitchain.asm  branch.asm  bytecode_vm_loop.c  calc_cout.cpp  calc_fib.c  calc_grade.c  calc_jumptable.c  calc_jumptable_large.c  calc_mixed.c  calc_sum_array.c  calc_sum_to_n.c  calc_switch.c  cmov_chain.asm  diamond.asm  dummy_vm_loop.c  indirect.asm  instr_add.asm  instr_rol.asm  instr_sub.asm  instr_xor.asm  jumptable_basic.asm  jumptable_computation.asm  jumptable_dense.asm  jumptable_rel32.asm  jumptable_shared_targets.asm  jumptable_shifted.asm  loop_simple.asm  multi_arg.asm  nested_branch.asm  stack.asm  stack_vm_loop.c  switch_3way.asm  switch_sparse.asm  vm_2d_loop.c  vm_4state64_loop.c  vm_4state_loop.c  vm_abs64_loop.c  vm_abs_array_loop.c  vm_addshl_byte64_loop.c  vm_addshl_dword64_loop.c  (+419 more)
tests/: rewrite_microtests.cpp
testscases/: test_memory.asm
teststuff/: test_branches.asm  test_memory.asm
